tests/ui/explicit-tail-calls/c-variadic.stderr
error: c-variadic functions can't be tail-called
  --> $DIR/c-variadic.rs:10:14
   |
LL |     unsafe { become foo(1, 2, 3) }
   |              ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

